fix: z-index

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -98,10 +98,12 @@
 
 #about{
     animation: bounceInDown 1.1s;
+    z-index: 999;
 }
 
 #shop{
     animation: bounceInDown 1.2s;
+    z-index: 999;
 }
 
 #about:hover {
@@ -112,3 +114,41 @@
     color: rgb(22, 225, 110);
 
 }
+
+.navbar, #brandingg {
+  position: relative;
+  z-index: 999;
+}
+
+/*
+. { position: relative; }
+
+#{
+  position: absolute;
+  top: ;
+  left: ;
+  width: ;
+  height: ;
+  transform: rotate();
+}
+*/
+
+.kuchtohai{
+    position: relative;
+    width: 100%;
+    overflow: hidden;
+}
+
+.card {
+  position: absolute;
+  overflow: hidden;
+}
+
+.card img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  display: block;
+}
+
+/*------------------------ab itna kaam --------------------------*/
